04-Apr-2013 Marked XmlUtilities' plist options properties as state only, and auto-generated support files

04-Apr-2013 OpusOptionCodeGenerator now recognizes a comment // StateOnly above a property in an interface file to indicate that the property has no delegates to register.

03-Apr-2013 Added help to OpusOptionCodeGenerator if no arguments are passed.

02-Apr-2013 VisualCCommon-dev is now dependent upon WindowsSDK-6.0A.

02-Apr-2013 Released 0.50 Alpha 3

02-Apr-2013 Gcc Objective-C disables strict aliasing as it causes type punning warnings with the use of 'super'.

27-Mar-2013 Added package XmlUtilities-dev with basic NativeBuilder XML serialization. Also added an OSX Plist module.

27-Mar-2013 Updated test packages CodeGenTest-dev and CodeGenTest2-dev to use FinalizeOptions rather than individual set handlers, since they have the same side-effect.

26-Mar-2013 OptionCollection finalization now occurs as a separate run from option creation. Creation occurs from top most parent module to lower most child, so that children inherit their parents options. Finalization now occurs in the reverse order, so that modules can query their dependents' options for state.

21-Mar-2013 Added C.OSXAppBundle module type, for creating the directory structure for an OSX application bundle, i.e. <name>.app/Contents/MacOS.

21-Mar-2013 Changed Opus.Core.BaseOptionCollection.FinalizeOptions to take a DependencyNode rather than a Target.

08-Mar-2013 Adding ObjectiveCTest1 and CocoaTest1 test packages.

08-Mar-2013 Introduced ObjectiveC and ObjectiveC++ support into C-dev, and Gcc-4.0 for OSX.

08-Mar-2013 Moved Win32 Resource Compiler dependency from the C package to the VisualCCommon package.

23-Feb-2013 Throw an exception if the package version specified on the command line does not match the *single* version in the package definition file.
