@@ -1,14 +1,0 @@
-// <copyright file="OSXAppBundle.cs" company="Mark Final">
-//  Opus package
-// </copyright>
-// <summary>C package</summary>
-// <author>Mark Final</author>
-namespace C
-{
-    /// <summary>
-    /// C/C++ OSX application bundle
-    /// </summary>
-    public class OSXAppBundle : Application
-    {
-    }
-}
